--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button1_3.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button1_3.xml
@@ -20,7 +20,7 @@
 
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(); ne işe yarar ? "
+        android:text="\n Goster(); ne işe yarar ? \n "
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_3_1"
@@ -39,7 +39,7 @@
         android:textColor="@color/colorPrimary"
         android:background="@drawable/elips_button"
         android:onClick="algoCevap1_3_1"
-        android:text="Kodların anlamını bize gösterir."
+        android:text="\n Kodların anlamını bize gösterir.\n "
 
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_3_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="algoCevap1_3_2"
-        android:text="Kodların çıktısını bize gösterir."
+        android:text="\n Kodların çıktısını bize gösterir. \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_3_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="algoCevap1_3_3"
-        android:text="Ekranda veri göstermemizi sağlar"
+        android:text="\n Ekranda veri göstermemizi sağlar \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_3_4"
         app:layout_constraintEnd_toEndOf="parent"
