--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button1_5.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button1_5.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(); fonksiyonu ne şekilde çalışır ? "
+        android:text="\n Goster(); fonksiyonu ne şekilde çalışır ? \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
 
@@ -36,7 +36,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo1_5_2"
-        android:text="Goster -> efsane"
+        android:text="\n Goster -> efsane \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_5_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:textColor="@color/colorPrimary"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo1_5_1"
-        android:text="Goster == efsane"
+        android:text="\n Goster == efsane \n"
 
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_5_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo1_5_3"
-        android:text="Goster()efsane"
+        android:text="\n Goster()efsane \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_5_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo1_5_4"
-        android:text="Goster(Efsane);"
+        android:text="\n Goster(Efsane); \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
