--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_1.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_1.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster() fonksiyonuna birden fazla kelime parametre olarak gönderilebilir.Parametre olarak gönderilen kelimeler ekrana yazdırılır "
+        android:text="\n Goster() fonksiyonuna birden fazla kelime parametre olarak gönderilebilir.Parametre olarak gönderilen kelimeler ekrana yazdırılır \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/textView67"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="goster(algoritme öğreniyorum)"
+        android:text="\n goster(algoritme öğreniyorum) \n"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/tvCevapAlgo2_1"
