--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_3.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_3.xml
@@ -19,7 +19,7 @@
         android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
-        android:text="Goster(işte geliyor) kodundaki işte geliyor nedir ? "
+        android:text="\n Goster(işte geliyor) kodundaki işte geliyor nedir ? \n"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo2_3_1"
-        android:text="Fonksiyondur"
+        android:text="\n Fonksiyondur \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo2_3_2"
-        android:text="Değişkendir"
+        android:text="\n Değişkendir \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo2_3_3"
-        android:text="Parametredir"
+        android:text="\n Parametredir \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo2_3_4"
-        android:text="Değişken türüdür"
+        android:text="\n Değişken türüdür \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
