--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_5.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_5.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="boy() parametrenin kaç harften oluştuğunu bize söyler.Ekrana 4 yazdıracak."
+        android:text="\n boy() parametrenin kaç harften oluştuğunu bize söyler.Ekrana 4 yazdıracak. \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/textView74"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(boy(atam))"
+        android:text="\n Goster(boy(atam)) \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/tvCevapAlgo2_5"
