--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_6.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_6.xml
@@ -34,7 +34,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(boy(Algoritma ögreniyorum))"
+        android:text="\n Goster(boy(Algoritma ögreniyorum)) \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/textView76"
@@ -52,7 +52,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Kod çalıştığında ekranda ne gösterir ? "
+        android:text="\n Kod çalıştığında ekranda ne gösterir ? \n"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/edCevapAlgo2_6"
@@ -74,7 +74,7 @@
 
         android:hint="  Yazmaya başla"
         android:textColor="@color/colorAccent"
-        android:textColorHint="@android:color/white"
+        android:textColorHint="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo2_6"
         app:layout_constraintEnd_toEndOf="parent"
