--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_7.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_7.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(boy(Askerrr!!!)) kod çalıştığında ekranda ne gösterecektir ?"
+        android:text="\n Goster(boy(Askerrr!!!)) kod çalıştığında ekranda ne gösterecektir ? \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_7_1"
@@ -36,7 +36,7 @@
         android:background="@drawable/elips_button"
         android:textColor="@color/colorPrimary"
         android:onClick="cevapAlgo2_7_1"
-        android:text="7"
+        android:text="\n 7 \n"
 
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_7_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo2_7_2"
-        android:text="11"
+        android:text="\n 11 \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_7_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo2_7_3"
-        android:text="3"
+        android:text="\n 3 \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_7_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo2_7_4"
-        android:text="10"
+        android:text="\n 10 \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
