--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button1_4.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button1_4.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(); nedir ? "
+        android:text="\n Goster(); nedir ? \n "
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_4_1"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="algoCevap1_4_1"
-        android:text="Veridir"
+        android:text="\n Veridir \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_4_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="algoCevap1_4_2"
-        android:text="Fonksiyondur"
+        android:text="\n Fonksiyondur \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_4_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="algoCevap1_4_3"
-        android:text="Değişkendir"
+        android:text="\n Değişkendir \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo1_4_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
         android:onClick="algoCevap1_4_4"
-        android:text="Değerdir "
+        android:text="\n Değerdir \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
