--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button1_6.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button1_6.xml
@@ -20,7 +20,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(Bilgisayar)"
+        android:text="\n Goster(Bilgisayar) \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/textView63"
@@ -38,7 +38,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Kod çalıştığında ekranda ne gösterecektir ? "
+        android:text="\n Kod çalıştığında ekranda ne gösterecektir ? \n"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/tvCevapAlgo1_6"
