--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_4.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_4.xml
@@ -19,7 +19,7 @@
         android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
-        android:text="Parametrenin,kelimenin kaç harften oluştuğunu öğrenmek için boy() fonksiyonunu kullanıyoruz."
+        android:text="\n Parametrenin,kelimenin kaç harften oluştuğunu öğrenmek için boy() fonksiyonunu kullanıyoruz. \n"
         app:layout_constraintBottom_toTopOf="@+id/textView71"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Örnek Kod"
+        android:text="\n Örnek Kod \n"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView72"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(boy())"
+        android:text="\n Goster(boy()) \n"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo2_4"
