--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button3_3.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button3_3.xml
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="lakap = Efsane \n Goster(Efsane)"
+        android:text="\n lakap = Efsane \n Goster(Efsane) \n"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView83"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Kod çaılştığında ekranda ne gösterilecektir ? "
+        android:text="\n Kod çaılştığında ekranda ne gösterilecektir ? \n"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/edCevapAlgo3_3"
