--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button3_4.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button3_4.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
 
         android:onClick="cevapAlgo4_1_1"
-        android:text="Verileri hafızada tutmamızı sağlar."
+        android:text="\n Verileri hafızada tutmamızı sağlar. \n"
         android:textColor="@color/colorPrimary"
         android:background="@drawable/elips_button"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo4_1_2"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Değişkenler ne işe yarar ? "
+        android:text="\n Değişkenler ne işe yarar ? \n"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo4_1_1"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo4_1_2"
-        android:text="Veriler ile işlem yapmamızı sağlar."
+        android:text="\n Veriler ile işlem yapmamızı sağlar. \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo4_1_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo4_1_3"
-        android:text="Veriler ile toplama işlemi yapılmasını sağlar."
+        android:text="\n Veriler ile toplama işlemi yapılmasını sağlar. \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo4_1_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
         android:onClick="cevapAlgo4_1_4"
-        android:text="Birden fazla verinin bir arada tutulmasını sağlar."
+        android:text="\n Birden fazla verinin bir arada tutulmasını sağlar. \n"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
