--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button4_1.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button4_1.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
         android:onClick="devamAlgo4_1"
-        android:text="Button"
+        android:text="DEVAM"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,9 +88,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
-        android:onClick="calistirAlgo4_1"
-        android:text="Button"
         android:textColor="@color/colorPrimary"
+        android:onClick="calistirAlgo4_1"
+        android:text="ÇALIŞTIR"
+
         app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo4_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
